# Distributed_dispatching_platform

./: BranchOfficeMain.cpp  CMakeLists.txt  README.md  main.cpp
branch_config/: routes.json
branch_config/routes_lists/: routes_lists_v2.json
center_config/: log.txt
center_config/routes_lists/: routes_lists_v2.json
config/: msg_templete.json  routes.json  tasks_list.json
config/center_config/: config.json  log.txt  routes.json
config/center_config/routes_lists/: routes_lists_v1.json
core/: BranchOffice.cpp  BranchOffice.h  LogisticsCenter.cpp  LogisticsCenter.h  Task.cpp  Task.h  Vehicle.cpp  Vehicle.h
docs/: api_reference.md  architecture.md  development_log.md  usage.md
network/: Client.cpp  Client.h  Server.cpp  Server.h
plugins/: PluginManager.cpp  PluginManager.h
tests/: TestBranchOffice.cpp  TestLogisticsCenter.cpp  test_client.cpp  test_json  test_json.cpp  test_server  test_server.cpp
utils/: Logger.h
